adora-k8s-files/apimanifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adoraburu-re-api-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adoraburu-re-bckend
  template:
    metadata:
      labels:
        app: adoraburu-re-bckend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3000"
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: site-apic
        image: adorapiimg:1.8
        imagePullPolicy: Never # forces K8s to use the locally built image
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: main-site-storage
          mountPath: /var/www/AdoRaburu-Re
        
      - name: nginx-proxy
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
        - name: main-site-storage
          mountPath: /var/www/AdoRaburu-Re 
          
      volumes:
      - name: main-site-storage
        persistentVolumeClaim:
          claimName: site-storage-pvc

      - name: nginx-config-volume
        configMap:
          name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: adorapi-svc
spec:
  selector:
    app: adoraburu-re-bckend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: adoraburu-web-svc
spec:
  selector:
    app: adoraburu-re-bckend 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adoraburu-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "4g" 
spec:
  rules:
  - host: adoraburu.utae 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: adoraburu-web-svc
            port:
              number: 80
